--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-size: 18px;
+}
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
 }
 
 @layer utilities {
